fix page content spacing and logo cenetered for mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -58,4 +58,12 @@
   height: 8rem; /* Adjust as needed */
   width: 8rem; /* Reduced width to prevent overflow */
   display: inline-block;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .image-container {
+    height: 4rem;
+    width: 4rem;
+  }
 }
